tests/good/13_var_no_init.src
# Test: Variable declaration without initialization
# Expected: 42
void main([string] args) {
    int x;
    x = 42;
    print_int(x);
}
