tests/bad/25_missing_type.src
# Test: Missing type in variable declaration
void main([string] args) {
    x = 42;  # Missing type
    return x;
}
